git-svn-id: http://subversion.assembla.com/svn/coldbox-dashboard/trunk@12 2385d54e-5a2a-0410-9eb9-86b772a996ef

--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,7 @@
                    
      lmajano                                                                
      ====================================================================== -->
-<project name="dashboard.build" default="deploy" basedir=".">
+<project name="dashboard.build" default="compile" basedir=".">
     <description>
             Compile and Build the dashboard.
     </description>
@@ -47,7 +47,7 @@
 		<!--Create the dist directory for distribution -->
 		<mkdir dir="${dist}"/>		
 		<!-- Copy the source to build directory without xml.cfm files. -->
-		<copy todir="${build}" verbose="true">
+		<copy todir="${build}">
 			<fileset dir="${src}">
 				<exclude name="**/*.xml.cfm"/>
 			</fileset>
