--- a/build.xml
+++ b/build.xml
@@ -36,8 +36,10 @@
 	<property name="coldfusion.compiler.classpath"  value="${coldfusion.compiler.libpath}/updates,${coldfusion.compiler.libpath}"/>
 	
 	<!--Destination of dist at export -->
-	<property name="dir.export" 					value="/Users/lmajano/Documents/MyDocs/My Programs/exports/coldbox/dashboard" />
+	<property name="dir.cf8.export" 				value="/Users/lmajano/Documents/MyDocs/My Programs/exports/coldbox/dashboard/cf8" />
+	<property name="dir.cf7.export" 				value="/Users/lmajano/Documents/MyDocs/My Programs/exports/coldbox/dashboard/cf7" />
 		
+	
 	<!-- Init -->
 	<target name="init">		
 		<!-- Create the time stamp -->
@@ -51,6 +53,7 @@
 			<fileset dir="${src}">
 				<exclude name="**/*.xml.cfm"/>
 				<exclude name="index.cfm" />
+				<exclude name="Application.cfc" />
 				<exclude name="handlers/baseHandler.cfc" />
 			</fileset>
 		</copy>		
@@ -71,6 +74,7 @@
 			<fileset dir="${src}">
 				<include name="**/*.xml.cfm"/>
 				<include name="index.cfm" />
+				<include name="Application.cfc" />
 				<include name="handlers/baseHandler.cfc" />
 			</fileset>
 		</copy>
