git-svn-id: http://subversion.assembla.com/svn/coldbox-dashboard/trunk@63 2385d54e-5a2a-0410-9eb9-86b772a996ef

--- a/build.xml
+++ b/build.xml
@@ -71,6 +71,8 @@
 		<move todir="${dir.cf8.export}">
 			<fileset dir="${dist.cf8}" />
 		</move>
+		<delete dir="${build}" />
+		<echo>Cleanup Complete.</echo>
 	</target>
 	
 	<!--Move XML Files-->
