--- a/build.xml
+++ b/build.xml
@@ -15,6 +15,7 @@
 	<!-- set global properties for this build -->
 	<property name="src" 							value="src"/>
 	<property name="build" 							value="build"/>
+	<property name="dist"							value="dist" />
 	<property name="dist.cf7"  						value="dist/cf7"/>
 	<property name="dist.cf8"  						value="dist/cf8"/>
 		
@@ -71,7 +72,7 @@
 		<move todir="${dir.cf8.export}">
 			<fileset dir="${dist.cf8}" />
 		</move>
-		<delete dir="${build}" />
+		<delete dir="${dist}" />
 		<echo>Cleanup Complete.</echo>
 	</target>
 	
