--- a/.project
+++ b/.project
@@ -17,5 +17,7 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>com.adobe.ide.coldfusion.projectNature</nature>
+		<nature>org.cfeclipse.cfml.CFENature</nature>
 	</natures>
 </projectDescription>
