--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Thu Aug 13 19:25:15 EDT 2009
+#Thu Aug 13 19:44:18 EDT 2009
 eclipse.preferences.version=1
 encoding//src/config/coldbox.xml.cfm=ISO-8859-1
+encoding//templates/apptemplate/config/coldbox.xml.cfm=UTF-8
